configuracion login usuarios y inclucion de pagina inicio

--- a/src/estilos/LoginUsers.css
+++ b/src/estilos/LoginUsers.css
@@ -1,11 +1,38 @@
-.loginUser-box {
+.loginUsers-box {
     display:grid;
+    grid-template-columns:20% 20% 20% 20% 20%;
+    grid-template-rows:100%;
+    width: 100%;
+   }
+.loginUsersAdm-box {
+    display:grid;
+    grid-column: 2;
     grid-template-columns:100%;
     grid-template-rows:50% 50%;
-    width: 25%;
+    width: 100%;
+    align-content: center;
+   }   
+
+.loginUsersProf-box {
+    display:grid;
+    grid-column: 3;
+    grid-template-columns:100%;
+    grid-template-rows:50% 50%;
+    width: 100%;
    }
+.loginUsersStd-box {
+    display:grid;
+    grid-column: 4;
+    grid-template-columns:100%;
+    grid-template-rows:50% 50%;
+    width: 100%;
+    
+   }   
+
+   
    
    .imageIconSize{
        width:10em;
        height: 10em;
+       align-self: center;
    }
