--- a/src/estilos/Header.css
+++ b/src/estilos/Header.css
@@ -7,7 +7,7 @@
 
 .text-style{
     font-size: 2em;
-    color:black;
+    color:rgb(255, 255, 255);
     text-align: center;
     align-self: center;
 }
